HEEP-1018 fixed scroll issue by adding overflow hidden back to body html

--- a/FrontEnd/Electron/src/assets/css/index.css
+++ b/FrontEnd/Electron/src/assets/css/index.css
@@ -3,3 +3,8 @@
   padding: 0px;
 }
 
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden
+}
